# LLM-Agentic-Robot-Exploration-Simulation

./: README.md
catkin_ws/devel/: .catkin
catkin_ws/devel/lib/apriltag_localization/: apriltag_localization_node
catkin_ws/devel/lib/local_costmap_generator/: heightmap_costmap_node  heightmap_node
catkin_ws/devel/lib/pkgconfig/: apriltag_localization.pc  global_occupancy_grid_mapper.pc  lidar_description.pc  local_costmap_generator.pc  main_simulator.pc  nexus_4wd_mecanum_description.pc  nexus_4wd_mecanum_gazebo.pc  orb_slam3_apriltag_fusion.pc  re540_final_map.pc  realsense2_description.pc  realsense_gazebo_plugin.pc  (+6 more)
catkin_ws/src/AprilTagLocalization/: tags.yaml
catkin_ws/src/main_simulator/: CMakeLists.txt  package.xml
catkin_ws/src/main_simulator/config/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
catkin_ws/src/main_simulator/launch/: main_launcher.launch
catkin_ws/src/main_simulator/scripts/: agentic_planner.py  agentic_planner_bridge.py  l_motion.py
catkin_ws/src/main_simulator/worlds/: obstacles_dynamic.world  obstacles_static.world  obstacles_static_1.world  obstacles_static_2.world  obstacles_static_x1.world  obstacles_static_x10.world  obstacles_static_x2.world  obstacles_static_x3.world  obstacles_static_x4.world  obstacles_static_x5.world  obstacles_static_x6.world  obstacles_static_x7.world  obstacles_static_x8.world  obstacles_static_x9.world
catkin_ws/src/orb_slam3_apriltag_fusion/: CMakeLists.txt
catkin_ws/src/robot_controller/: CMakeLists.txt
catkin_ws/src/rviz_visualization/: config-1.rviz  config-2.rviz  config-3.rviz
catkin_ws/src/semantic_mapping/: CMakeLists.txt
catkin_ws/src/semantic_mapping/maps/: historical_robot_trajectory.json  semantic_map.json  store_coordinates.json  target_object_grasping.json
catkin_ws/src/semantic_mapping/scripts/: storing_coordinate.py
catkin_ws/src/yolo11_detector/: CMakeLists.txt  package.xml
(+53 files in other folders)
